# Exyl

./: .gitignore  CMakeLists.txt  TODO.md  arrays.ex  main.ex  scopes.ex  shell.nix
Compiler/: CodeGen.cpp  CodeGen.h  Finish.cpp  Finish.h  Main.cpp  Parser.cpp  Parser.h  Semantics.cpp  Semantics.h  Tokenizer.cpp  Tokenizer.h  Type.h  Utils.h
compiler/: CMakeLists.txt  Cargo.toml
compiler/src/: analyzer.cpp  analyzer.h  ast.h  ast.rs  builtin.rs  codegen.h  codegen.rs  compile.rs  function.rs  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.cpp  parser.h  parser.rs  scope.h  scope.rs  token.h  token.rs  type.h  type_checker.rs
compiler/src/codegen/: codegen.cpp  codegen.h  codegen_visitor.cpp  codegen_visitor.h
examples/: calculator.ex
runtime/: Cargo.toml
runtime/src/: io.c  io.rs  math.c  runtime.c
std/: CMakeLists.txt  io.ex
std/native/: print.cpp
test/: add.exl  extern.exl  test.exl
